добавил новое поле в БД для имени польозователя, переделал запрос на отправку сообщения, теперь туда улетает сущность Message, а не просто поля. Нужно для того, чтобы переиспользовать эту сущность в stream для создания соединения с чатом
