# internal/model/chat.go
@@ -4,8 +4,9 @@ import "time"
 
 // Message ..
 type Message struct {
-	FromUserID int64
-	Text       string
-	ToChatID   int64
-	SendTime   time.Time
+	FromUserID   int64
+	FromUserName string
+	Text         string
+	ToChatID     int64
+	SendTime     time.Time
 }
